--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <ul class="nav navbar-nav">
-      <li class="active">
-        <a routerLink="create" routerLinkActive="active">
-          Add coins
-        </a>
-      </li>    
-    </ul>
-  </div>
-</nav>
-
 <div class="container">
+  <nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+      <ul class="nav navbar-nav">
+        <li class="active">
+          <a routerLink="create" routerLinkActive="active">
+            Add coins
+          </a>
+        </li>    
+      </ul>
+    </div>
+  </nav>
+  <hr>
   <router-outlet></router-outlet>
 </div>
