Added default environment specific configuration in node and angular

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<img src="assets/images/connecting-angularjs-mongodb.png">
+<!-- <img src="assets/images/connecting-angularjs-mongodb.png"> -->
+<div class="center">
+    <h5>Features:</h5>
+    <ul>
+        <li>Angular 5</li>
+        <li>NodeJS 8.9</li>
+        <li>MongoDB 3.2</li>
+        <li>TypeScript 2.5</li>
+    </ul>
+</div>    
