--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <div class="container">
-  <router-outlet></router-outlet>
+    <div class="col-sm-8 col-sm-offset-2">
+      <br>
+      <flash-messages></flash-messages>
+      <br>
+      <router-outlet></router-outlet>
+    </div>  
 </div>  
