--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -11,8 +11,10 @@
       <tr *ngFor="let coin of coins">
           <td>{{ coin.name }}</td>
           <td>{{ coin.price }}</td>
-          <td><a [routerLink]="['/edit', coin._id]" class="btn btn-primary">Edit</a>|
-            <a routerLink="" class="btn btn-danger">Delete</a>
+          <td>
+            <a routerLink="/create" class="btn btn-primary">Add</a>|
+            <a [routerLink]="['/edit', coin._id]" class="btn btn-primary">Edit</a>|
+            <button (click)="deleteCoin(coin._id)" class="btn btn-danger">Delete</button>
            </td>
       </tr>
   </tbody>
