--- a/src/app/layouts/site-header/site-header.component.html
+++ b/src/app/layouts/site-header/site-header.component.html
@@ -2,8 +2,8 @@
   <div class="container-fluid">
     <ul class="nav navbar-nav">
       <li class="active">
-        <a routerLink="create" routerLinkActive="active">
-          Add coins
+        <a routerLink="/index" routerLinkActive="active">
+          Coins
         </a>
       </li>    
     </ul>
