--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -3,7 +3,7 @@
     <form [formGroup]="angForm" novalidate>
       <div class="form-group">
         <label class="col-md-4">Coin Name</label>
-        <input type="text" class="form-control" formControlName="name" #name />
+        <input type="text" class="form-control" formControlName="name" #name autofocus=true/>
       </div>
       <div *ngIf="angForm.controls['name'].invalid && (angForm.controls['name'].dirty || angForm.controls['name'].touched)" class="alert alert-danger">
         <div *ngIf="angForm.controls['name'].errors.required">
